# open-source-lunar-rover-ros

./: CMakeLists.txt  README.md  package.xml
config/: joint_controller_corner.yaml  joint_controller_states.yaml  joint_controller_wheels.yaml  joint_names_osr.yaml  oslr_parameters.yaml  oslr_parameters_old.yaml  osr_parameters.yaml  osr_parameters_old.yaml  physical_properties.yaml
launch/: gazebo.launch
meshes/: back_left_corner.STL  back_left_wheel.STL  back_right_wheel.STL  front_left_corner.STL  front_left_wheel.STL  front_right_wheel.STL  middle_left_wheel.STL  middle_right_wheel.STL  navcam_horiz.STL
models/oslr/meshes/: front_left_wheel.STL  front_right_corner.STL  middle_right_wheel.STL  navcam_eye_right.STL  navcam_horiz.STL  navcam_vertical.STL
msg/: CommandCorner.msg  CommandDrive.msg  Drive.msg
oslr/: CMakeLists.txt  package.xml
oslr_base/: CMakeLists.txt  package.xml
oslr_base/scripts/: motion_control.py
oslr_bringup/: CMakeLists.txt  package.xml
oslr_bringup/launch/: oslr_robot.launch
oslr_config/: CMakeLists.txt  package.xml
oslr_config/config/: oslr_parameters.yaml  oslr_parameters_old.yaml
oslr_config/scripts/: parameters.py
oslr_description/: CMakeLists.txt  package.xml
oslr_description/models/oslr/meshes/: back_right_corner.STL  back_right_wheel.STL  base_link.STL  middle_left_wheel.STL  navcam_eye_left.STL
oslr_description/urdf/: oslr.urdf.xacro  oslr_base.xacro  oslr_navcam.xacro  oslr_rockerbogie.xacro  oslr_wheels.xacro
oslr_gazebo/: CMakeLists.txt  package.xml
oslr_gazebo/launch/: main.launch
oslr_msgs/: CMakeLists.txt  package.xml
oslr_msgs/action/: stereo_depth.action
oslr_msgs/msg/: Drive.msg  Steer.msg
oslr_navigation/: CMakeLists.txt  package.xml
oslr_navigation/scripts/: navcam.py  navcam_depth_server.py  navcam_stereo_depth_server.py
oslr_teleop/: CMakeLists.txt  package.xml
oslr_teleop/rqt_config/: oslr_rqt_dashboard.perspective
src/: constants.py  parameters.py  rover.py
src/include/: roverlib.py
urdf/: oslr.urdf.xacro  oslr_base.xacro  oslr_geometry.urdf.xacro  oslr_navcam.xacro  oslr_rockerbogie.xacro  oslr_wheels.xacro  osr.urdf.xacro  osr_geometry.urdf.xacro
world/: world.sdf
